--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="site-logo"> <a href="index.html">Somya's Photography</a> </div>
     <ul class="social ">
       <li><a href="#"><span class="icon-facebook"></span></a></li>
-      <li><a href="#"><span class="icon-twitter"></span></a></li>
+      <li><a href="https://www.instagram.com/somyaphotography/" target=blank;><span class="icon-twitter"></span></a></li>
       <li><a href="#"><span class="icon-instagram"></span></a></li>
     </ul>
   </header>
@@ -103,17 +103,13 @@
       <div class="row justify-content-center">
         <div class="col-md-12 text-center py-5">
           <p> 
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> 
-            Copyright All rights reserved | by <a href="http://somyaphotography.com" target="_blank" >Somya's Photography</a> 
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> 
-          </p>
+                 All rights reserved | by <a href="http://somyaphotography.com" target="_blank" >Somya's Photography</a> 
+           </p>
         </div>
       </div>
     </div>
   </main>
 </div>
-<!-- .site-wrap --> 
-
 <script src="js/jquery-3.3.1.min.js"></script> 
 <script src="js/jquery-migrate-3.0.1.min.js"></script> 
 <script src="js/jquery-ui.js"></script> 
